# SyncScribe

./: .gitignore
.dever/: session_dag.json
fe-next/: .gitignore  .prettierrc  README.md  package.json  pnpm-lock.yaml  tree.md
fe-next/apps/partykit/: package.json  partykit.json  server.ts  tsconfig.json
fe-next/apps/python-service/: README.md  main.py  pyproject.toml  requirements.txt
fe-next/apps/python-service/vibe/: image_utils.py  project_analysis_prompt_builder.py  pydanticai_demo.py  sentiment.py  test.md
fe-next/apps/web/: .gitignore  AGENTS.md  eslint.config.js  global.d.ts  package.json  pnpm-lock.yaml  prisma.config.ts  skills.md  tsconfig.json
fe-next/apps/web/.storybook/: main.ts  preview.ts
fe-next/apps/web/app/: layout.tsx  page.tsx
fe-next/apps/web/components/: AreaChart.tsx  AttachmentList.tsx  ChatCard.tsx  ChatCards.tsx  ChatContainer.tsx  ChatInput.tsx  CrystalBar.tsx  EditorHost.tsx  providers.tsx
fe-next/apps/web/dev-log/: 2025.11.27.md
fe-next/apps/web/hooks/: use-chat-submit.ts  use-file-upload.ts  use-media-upload.ts
fe-next/apps/web/lib/: ai-models.ts  ai.ts  client.ts  types.ts
fe-next/apps/web/prisma/: index.md  schema.prisma
fe-next/apps/web/scripts/: Button.tsx  ast.ts  generate-repo-skeleton.ts  index.md  ingest-pdf.ts  mock.d.ts  test-retrieve.ts
fe-next/apps/web/server/: app-repo-guide.ts  app.ts
fe-next/apps/web/store/: chat-atoms.ts
fe-next/apps/web/stories/: AreaChart.stories.tsx  (+1 more)
fe-next/prompts/: AGENTS.md  SPEC.md  SPEC2.md  SPEC3.md  agent-dev.md  check-doc.md  design.md  vibe.md
(+151 files in other folders)
